force-app/main/default/objects/Account/fields/Avg_Resolution_Days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Resolution_Days__c</fullName>
    <label>Avg Resolution Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>