force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Integration will automatically fill Billing Address based on lat longitude</description>
    <inlineHelpText>Integration will automatically fill Billing Address based on lat longitude</inlineHelpText>
    <label>Location</label>
    <scale>14</scale>
    <type>Location</type>
</CustomField>