force-app/main/default/objects/Account/fields/Total_Child_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Contacts__c</fullName>
    <label>Total Child Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>